manifests/homer/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: homer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: homer
        backstage.io/kubernetes-id: homer
    spec:
      containers:
      # Pinned 2026-06-15: was b4bz/homer:latest. Eliminates silent image drift
      # on pod restart. v26.4.2 was newest published tag at pin time.
      - image: docker.io/b4bz/homer:v26.4.2
        imagePullPolicy: IfNotPresent
        name: homer
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /www/assets/config.yml
          name: config
          subPath: config.yml
        - mountPath: /www/assets/custom.css
          name: config
          subPath: custom.css
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 65533
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: homer-config
        name: config
