manifests/homer/08-eng-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer-eng
  namespace: homer
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: homer-eng
  sessionAffinity: None
  type: ClusterIP
